Fixed square draw on IOS system

--- a/src/scss/2-tools/animations/_squareDraw.scss
+++ b/src/scss/2-tools/animations/_squareDraw.scss
@@ -36,7 +36,7 @@
     top: 100%;
     bottom: 0;
     left: 0;
-    right: 100%;
+    right: calc(100% - 10px);
   }
   50% {
     border: 10px solid $white;
@@ -45,7 +45,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    right: 100%;
+    right: calc(100% - 10px);
   }
   to {
     border: 10px solid $white;
