--- a/src/scss/4-layout/about/_about.scss
+++ b/src/scss/4-layout/about/_about.scss
@@ -42,6 +42,11 @@
 
     &-wrapper {
       display: inline-block;
+
+      &::before,
+      &::after {
+        border: 10px solid transparent;
+      }
     }
   }
 
