--- a/src/scss/4-layout/contact/_contact.scss
+++ b/src/scss/4-layout/contact/_contact.scss
@@ -42,6 +42,11 @@
       @media screen and (max-width: $FHD) {
         margin-top: 40px;
       }
+
+      &::before,
+      &::after {
+        border: 10px solid transparent;
+      }
     }
   }
 
